Update selectionToolbar to have sticky positioning

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <!-- Selection menu -->
     <section>
-      <div id="selectionToolbar" class="hidden">
+      <div id="selectionToolbar" class="hidden" style="position: sticky; top: 0px;">
         <span id="selectionCount">0 selected</span>
         <button id="selectAllBtn">Select All</button>
         <button id="deleteSelectedBtn" class="danger">Delete</button>
