Fix file paths in index.html
Updated file paths for manifest and service worker.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Catalog</title>
 
-  <link rel="manifest" href="assets/manifest.json" />
+  <link rel="manifest" href="/DvdCatalogue/assets/manifest.json" />
   <link rel="icon" href="assets/icons/icon-192.png" />
   <link rel="stylesheet" href="assets/styles.css" />
 </head>
@@ -148,12 +148,13 @@
   </div>
 </div>
 
-  <script type="module" src="assets/app.js"></script>
+  <script type="module" src="/DvdCatalogue/assets/app.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('assets/service-worker.js');
+      navigator.serviceWorker.register('/DvdCatalogue/assets/service-worker.js');
     }
   </script>
 </body>
+
 
 </html>
