--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Catalog</title>
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="manifest" href="/assets/manifest.json" />
-  <link rel="icon" href="/assets/icons/icon-192.png" />
-  <link rel="stylesheet" href="/assets/styles.css" />
+  <link rel="manifest" href="/DvdCatalogue/assets/manifest.json" />
+  <link rel="icon" href="/DvdCatalogue/assets/icons/icon-192.png" />
+  <link rel="stylesheet" href="/DvdCatalogue/assets/styles.css" />
 
 </head>
 
@@ -188,10 +188,10 @@
     </div>
   </div>
 
-  <script type="module" src="/assets/app.js"></script>
+  <script type="module" src="/DvdCatalogue/assets/app.js"></script>
   <script>
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/assets/service-worker.js');
+      navigator.serviceWorker.register('/DvdCatalogue/assets/service-worker.js');
     }
   </script>
 </body>
