--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       </div>
 
       <!-- Import/Export Section -->
-      <div class="section import-ui">
+      <div class="section import-ui" id="importSectionMargin">
         <h2 class="toolbar-title">Import & Export</h2>
 
         <div class="file-toolbar">
@@ -202,8 +202,6 @@
             <span class="material-icons">download</span> Export
           </button>
         </div>
-
-
 
         <!-- Progress bars -->
         <div class="progress-wrapper hidden" id="importProgress">
